--- a/Calculator/calc.css
+++ b/Calculator/calc.css
@@ -7,7 +7,7 @@ table{
 }
 
 #display{
-    background-color: rgb(243, 242, 242);
+    background-color: ghostwhite;
     color: black;
     border-radius: 10%;
 }
